--- a/EventHorizonScraper.Core/EventHorizonScraper.Core.csproj
+++ b/EventHorizonScraper.Core/EventHorizonScraper.Core.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
+      <PackageReference Include="NLog" Version="5.2.8" />
     </ItemGroup>
 
 </Project>
