--- a/EventHorizonScraper.Core/EventHorizonScraper.Core.csproj
+++ b/EventHorizonScraper.Core/EventHorizonScraper.Core.csproj
@@ -12,4 +12,10 @@
       <PackageReference Include="NLog" Version="5.2.8" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="nlog.config">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
