Fix issue with info & warn not saving to file

--- a/EventHorizonScraper.Core/nlog.config
+++ b/EventHorizonScraper.Core/nlog.config
@@ -18,7 +18,7 @@
     <!-- Rules for mapping loggers to targets -->
     <rules>
         <!--All logs, including from Microsoft, should go to both console and file -->
-        <logger name="*" minlevel="Info" maxlevel="Warn" writeTo="logconsole,logfile" />
+        <logger name="*" minlevel="Info" maxlevel="Warn" writeTo="logconsole,infolog" />
         <logger name="*" minlevel="Error" writeTo="logconsole,errorlog" />
     </rules>
 </nlog>
