Include AngleSharp package

--- a/EventHorizonScraper.Core/EventHorizonScraper.Core.csproj
+++ b/EventHorizonScraper.Core/EventHorizonScraper.Core.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AngleSharp" Version="1.1.1-beta.387" />
+      <PackageReference Include="AngleSharp.Css" Version="1.0.0-beta.139" />
+      <PackageReference Include="AngleSharp.XPath" Version="2.0.3" />
       <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
       <PackageReference Include="NLog" Version="5.2.8" />
     </ItemGroup>
